# ava

./: ChangeLog.md  ava.cabal  default.nix
nix/: hrecursion-schemes.json  singletons.nix  th-desugar.nix
src/Data/: Fin.hs  Nat.hs
src/Data/Fin/: Internal.hs
src/Data/Nat/: Internal.hs  LTE.hs  Properties.hs
src/Language/: Ava.hs
src/Language/Ava/: Fin.hs  Nat.hs  TypeCheck.hs
