name:                ava
version:             0.1.0.0
synopsis:            A pure type system
license:             MIT
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
copyright:           @2017 Kyle McKean, Remy Goldschmid
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     Language.Ava
  build-depends:       base >=4.9 && <4.10
                     , flow == 1.0.*
                     , text == 1.2.*
                     , lens == 4.15.*
                     , singletons == 2.3.*
  hs-source-dirs:      src
  default-language:    Haskell2010
